<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AnadirReviewActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="#F9F9F9"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="32dp"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tituloLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/insertar_titulo"
                android:textSize="18sp"
                android:textColor="#333333"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/titulo"
                android:layout_marginBottom="16dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/insertarTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    android:textColorHint="#777777"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Resumen -->
            <TextView
                android:id="@+id/resumenLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/insertar_resumen"
                android:textSize="18sp"
                android:textColor="#333333"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/resumen"
                android:layout_marginBottom="16dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/insertarResumen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    android:textColorHint="#777777"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Fecha -->
            <TextView
                android:id="@+id/fechaLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inserte_la_fecha"
                android:textSize="18sp"
                android:textColor="#333333"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fecha_dd_mm_aaaa"
                android:layout_marginBottom="16dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/insertarFecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    android:textColorHint="#777777"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Imagen URL -->
            <TextView
                android:id="@+id/imagenLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/insertar_enlace_review"
                android:textSize="18sp"
                android:textColor="#333333"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/url_imagen"
                android:layout_marginBottom="16dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/insertarImagen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    android:textColorHint="#777777"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Enlace de la Review -->
            <TextView
                android:id="@+id/enlaceLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/insertar_enlace_review"
                android:textSize="18sp"
                android:textColor="#333333"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/url_review"
                android:layout_marginBottom="16dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/insertarEnlace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    android:textColorHint="#777777"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Botón Guardar -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnGuardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guardar"
                android:textSize="16sp"
                android:backgroundTint="@color/boton"
                android:textColor="@android:color/white"
                app:cornerRadius="50dp"
                android:layout_marginTop="12dp"
                android:paddingVertical="12dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
